discussion/kv_engine/159412/159412_rev18_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47687: Prevent dropping of prepares which can be undone by Magma rollback

Magma creates checkpoints every few minutes which are used for
rollback. Since magma does background compaction it is possible
for compaction to drop deletes between the checkpoints. If
kv_engine requests a rollback to one of these checkpoints, the
sequence scan does not see the compacted prepare keys resulting
in the rollback callback not being called for these keys.
This patch ensures we dont drop prepares that can be rolled back
by magma.

Change-Id: If6c3faa48e500506ca36f5282ced6f892018537d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2021-09-08 08:16:12.000000000
Message: 
Uploaded patch set 18.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-08 08:26:39.000000000
Message: 
Patch Set 18: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33669/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3026:33:
error: no member named "persistedCompletedSeqno" in "MagmaDbStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33669/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39524/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(3026): error C2039: "persistedCompletedSeqno": is not a member of "MagmaDbStats" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39524/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12085/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3026:33: error: no member named "persistedCompletedSeqno" in "MagmaDbStats" [clang-diagnostic-error]
        seqno = magmaUserStats->persistedCompletedSeqno;
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12085/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3026:33:
error: no member named "persistedCompletedSeqno" in "MagmaDbStats" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12085/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13698/ : FAILURE

Compile error at [2021-09-08T08:19:18.863Z] ../third_party/googletest/googletest/include/gtest/internal/gtest-internal.h:1171:12:
error: ?testing::internal::FlatTupleBase<testing::internal::FlatTuple<T ...>, testing::internal::IndexSequence<I ...> >::FlatTupleBase(T ...) [with long unsigned int ...Idx = {}; T = {}]? cannot be overloaded with ?testing::internal::FlatTupleBase<testing::internal::FlatTuple<T ...>, testing::internal::IndexSequence<I ...> >::FlatTupleBase() [with long unsigned int ...Idx = {}; T = {}]?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13698/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1729/ : FAILURE

Compile error at [2021-09-08T08:17:46.006Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3026:33:
error: no member named "persistedCompletedSeqno" in "MagmaDbStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1729/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14399/ : FAILURE

Compile error at [2021-09-08T08:17:39.262Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3026:33:
error: no member named "persistedCompletedSeqno" in "MagmaDbStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14399/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13937/ : FAILURE

Compile error at [2021-09-08T08:18:35.324Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3026:33:
error: ?class MagmaDbStats? has no member named ?persistedCompletedSeqno?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13937/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12845/ : FAILURE

Compile error at [2021-09-08T08:18:43.381Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3026:33:
error: no member named "persistedCompletedSeqno" in "MagmaDbStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12845/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1748/ : FAILURE

Compile error at [2021-09-08T08:24:33.004Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3026:33:
error: ?class MagmaDbStats? has no member named ?persistedCompletedSeqno?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1748/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21898/ : FAILURE

Compile error at [2021-09-08T08:18:22.253Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3026:33:
error: no member named "persistedCompletedSeqno" in "MagmaDbStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21898/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10874/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
